[gd_scene load_steps=22 format=2]

[ext_resource path="res://dudes/Rhino/Rhino.tscn" type="PackedScene" id=1]
[ext_resource path="res://dudes/Mammoth/Mammoth.gd" type="Script" id=2]
[ext_resource path="res://assets/units/Mammut/Blue/Back/Walk_0002.png" type="Texture" id=3]
[ext_resource path="res://assets/units/Mammut/Blue/Back/Walk_0001.png" type="Texture" id=4]
[ext_resource path="res://assets/units/Mammut/Blue/Front/Walk_0001.png" type="Texture" id=5]
[ext_resource path="res://assets/units/Mammut/Blue/Front/Walk_0002.png" type="Texture" id=6]
[ext_resource path="res://assets/units/Mammut/Blue/Right/Walk_0002.png" type="Texture" id=7]
[ext_resource path="res://assets/units/Mammut/Blue/Right/Walk_0001.png" type="Texture" id=8]
[ext_resource path="res://assets/units/Mammut/red/Back/Walk_0002.png" type="Texture" id=9]
[ext_resource path="res://assets/units/Mammut/red/Back/Walk_0001.png" type="Texture" id=10]
[ext_resource path="res://assets/units/Mammut/red/Front/Walk_0002.png" type="Texture" id=11]
[ext_resource path="res://assets/units/Mammut/red/Right/Walk_0001.png" type="Texture" id=12]
[ext_resource path="res://assets/units/Mammut/red/Front/Walk_0001.png" type="Texture" id=13]
[ext_resource path="res://assets/units/Mammut/red/Right/Walk_0002.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 200.0

[node name="Mammoth" instance=ExtResource( 1 )]
script = ExtResource( 2 )
regular_sprites_front = SubResource( 1 )
enemy_sprites_front = SubResource( 2 )
regular_sprites_back = SubResource( 3 )
enemy_sprites_back = SubResource( 4 )
regular_sprites = SubResource( 5 )
enemy_sprites = SubResource( 6 )

[node name="AnimatedSprite" parent="." index="0"]
frame = 3

[node name="Position2D" type="Position2D" parent="AnimatedSprite" index="0"]
position = Vector2( -1.43048, -27.3395 )

[node name="Range" type="Area2D" parent="." index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="." index="7"]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
